--- a/paper.tex
+++ b/paper.tex
@@ -86,6 +86,11 @@ However, existing resources for assignment submission and student feedback in us
 I integrated some CS DropBox\footnote{https://csguide.cs.princeton.edu/academic/csdropbox} functionality where relevant, and modelled the leaderboard structure after review of the leaderboard implementation used in other Princeton CS classes.
 Generally, however, no such tools would leverage the high degree of structural similarity between strategy design exercises, and a dedicated project for these exercises will allow for more efficient development and evaluation.
 
+\section*{Approach}
+Throughout the course of developing this framework, I have leveraged my role as an undergraduate course assistant for COS 445 during the current semester.
+That is, in order to develop a reusable toolchain for building strategy design exercises, I have developed strategy design exercises to inform the design and development of a reusable toolchain.
+
+
 \section*{Conclusions}
 prisoner's dilemma + search auctions
 
